Do not force vertical scrollbar on page

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -186,7 +186,7 @@ textarea {
 html {
   font: 112.5%/1.45em 'source sans pro', georgia, serif;
   box-sizing: border-box;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 * {
   box-sizing: inherit;
